added styling for title and inputs

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
 #over20 {
     background-color: red;
 }
+
+.jumbotron {
+    text-align: center;
+    margin-top: 10px;
+}
+
+#submitInfoBtn {
+    position: absolute;
+    bottom: 0px;
+}
